# logger

./: CMakeLists.txt
include/: logger.h
src/: CMakeLists.txt  logger.c
tests/: CMakeLists.txt  test_open.c
